2007-09-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoFreeBusyObject.m ([SOGoFreeBusyObject
	-fetchFreeBusyInfosFrom:_startDateto:_endDate]): fetch the
	freebusy info from the "personal" calendar.

	* UI/Common/UIxParentFolderActions.m ([UIxParentFolderActions
	-createFolderAction]): new standardized method for requesting
	folder creations among gcs-based modules.

	* UI/Common/UIxParentFolderActions.[hm]: new action class module.

	* SoObjects/Appointments/SOGoAppointmentFolders.m: new class
	module, equivalent to the SOGoParentFolder's child
	SOGoContactFolders, but for calendars.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -labelForKey:key]): new
	method that returns translated strings for controller bundles
	(same as what UIxComponent does for view bundles).
	([SOGoObject -pathArrayToSOGoObject]): new method that returns
	the real path to a subscribed folder (if subscribed).
	([SOGoObject +globallyUniqueObjectId]): move method from SOGoFolder.
	([SOGoObject -globallyUniqueObjectId]): new instance method
	calling its class equivalent.

2007-09-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -defaultAction]): test
	whether the user is logged in and if so, redirect to his/her
	homepage.
	([SOGoRootPage -appendToResponse:inContext:]): removed useless
	method.

2007-09-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	+folderWithName:aNameandDisplayName:aDisplayNameinContainer:aContainer]):
	new method.
	([SOGoFolder -displayName]): new method.
	([SOGoFolder -delete]): accept to proceed only if nameInContainer
	!= "personal".

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	+folderWithName:aNameandDisplayName:aDisplayNameinContainer:aContainer]):
	renamed from "contactFolderWithName..." for compatibility with SOGoFolder.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder